# ibex-demo-system-pynqz2

./: README.md  ibex_demo_system.core
data/: pins_pynqz2.xdc
sw/demo/: CMakeLists.txt
sw/demo/aes/: CMakeLists.txt  aes-ip-top.c  aes-ip.c  common.h  gf_256.c  gf_256.h  main.c  masking.c  utils.c  utils.h
util/: arty-a7-openocd-cfg.tcl
